--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "buefy": "^0.7.3",
     "register-service-worker": "^1.5.2",
     "vue": "^2.6.6",
+    "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
@@ -22,7 +25,6 @@
     "@vue/cli-plugin-pwa": "^3.4.0",
     "@vue/cli-plugin-unit-mocha": "^3.4.0",
     "@vue/cli-service": "^3.4.0",
-    "@vue/eslint-config-airbnb": "^4.0.0",
     "@vue/test-utils": "^1.0.0-beta.20",
     "babel-eslint": "^10.0.1",
     "chai": "^4.1.2",
@@ -30,17 +32,16 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "vue-cli-plugin-axios": "^0.0.4",
+    "vue-cli-plugin-moment": "^0.1.1",
     "vue-template-compiler": "^2.5.21"
   },
   "eslintConfig": {
-    "root": true,
+    "root": false,
     "env": {
-      "node": true
+      "node": false
     },
-    "extends": [
-      "plugin:vue/essential",
-      "@vue/airbnb"
-    ],
+    "extends": [],
     "rules": {},
     "parserOptions": {
       "parser": "babel-eslint"
